# pppicker

./: .gitignore  Cargo.toml  README.md
examples/: example-grid.json  example-list.json  grid.rs  list.rs
examples/hyprpaper/: fetch_wallpapers.sh  main.rs  style.css
examples/swww/: fetch_wallpapers.sh  main.rs  style.css
src/: app.rs  cli.rs  core.rs  data.rs  lib.rs  main.rs
src/frontend/: grid.rs  list.rs  mod.rs
