[package]
name = "pppicker"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.10" }
gtk-layer-shell = { package = "gtk4-layer-shell", version = "0.7" }
glib = "0.21"
gio = "0.21"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
walkdir = "2.5"
image = "0.25"
dirs-next = "2.0"
once_cell = "1.21"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
